# Dispatcher_game

./: Airplane.cpp  Airplane.h  CMakeLists.txt  Global.h  README.md  Structures.h  aircraft.cpp  aircraft.h  main.cpp  runway.h
untitled/: CMakeLists.txt
